--- a/02_decide/.travis.yml
+++ b/02_decide/.travis.yml
@@ -4,18 +4,21 @@ services:
   - postgresql
 addons:
   postgresql: "9.4"
+  postgresql: "9.6"
 before_script:
   - psql -U postgres -c "create user decide password 'decide'"
   - psql -U postgres -c "create database test_decide owner decide"
   - psql -U postgres -c "ALTER USER decide CREATEDB"
 language: python
 python:
-  - "3.7"
+  - "3.6"
+  - "3.8"
 install:
-  - pip install -r requirements.txt
+  - pip install -r 02_decide/requirements.txt
   - pip install codacy-coverage
 script:
   - cd decide
   - coverage run --branch --source=. ./manage.py test authentication --keepdb --with-xunit
+  - coverage run --branch --source=. ./manage.py test census --keepdb --with-xunit
   - coverage xml
   - python-codacy-coverage -r coverage.xml
