--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ python:
   - "3.6"
   - "3.8"
 install:
-  - pip install -r 02_decide/requirements.txt
+  - pip install -r requirements.txt
   - pip install codacy-coverage
 script:
   - cd decide
